from RSA to EC
make hashing and key algorithm variable
