# argos-service-api/api.yml
@@ -1266,14 +1266,20 @@ components:
       required:
         - keyId
         - signature
+        - hashAlgorithm
+        - keyAlgorithm
       properties:
         keyId:
           $ref: '#/components/schemas/KeyId'
         signature:
           type: string
-          minLength: 512
+          minLength: 80
           maxLength: 1024
           pattern: '^[0-9a-f]*$'
+        hashAlgorithm:
+          $ref: '#/components/schemas/HashAlgorithm'
+        keyAlgorithm:
+          $ref: '#/components/schemas/KeyAlgorithm'
     Link:
       type: object
       required:
@@ -1316,17 +1322,35 @@ components:
           minLength: 64
           maxLength: 64
           pattern: '^[0-9a-f]*$'
-    KeyPair:
+    PublicKey:
       type: object
       required:
         - keyId
         - publicKey
+        - algorithm
       properties:
         keyId:
           $ref: '#/components/schemas/KeyId'
         publicKey:
           type: string
           format: byte
+        algorithm:
+          $ref: '#/components/schemas/KeyAlgorithm'
+    KeyPair:
+      type: object
+      required:
+        - keyId
+        - publicKey
+        - algorithm
+        - encryptedPrivateKey
+      properties:
+        keyId:
+          $ref: '#/components/schemas/KeyId'
+        publicKey:
+          type: string
+          format: byte
+        algorithm:
+          $ref: '#/components/schemas/KeyAlgorithm'
         encryptedPrivateKey:
           type: string
           format: byte
@@ -1335,21 +1359,24 @@ components:
       required:
         - keyId
         - publicKey
-        - hashedKeyPassphrase
+        - algorithm
         - encryptedPrivateKey
+        - hashedKeyPassphrase
       properties:
         keyId:
           $ref: '#/components/schemas/KeyId'
         publicKey:
           type: string
           format: byte
+        algorithm:
+          $ref: '#/components/schemas/KeyAlgorithm'
+        encryptedPrivateKey:
+          type: string
+          format: byte
         hashedKeyPassphrase:
           type: string
           writeOnly: true
           description: used for authentication of a service account via http basic authentication
-        encryptedPrivateKey:
-          type: string
-          format: byte
     SupplyChain:
       type: object
       required:
@@ -1369,17 +1396,6 @@ components:
           minLength: 36
           maxLength: 36
           pattern: '^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}?$'
-    PublicKey:
-      type: object
-      required:
-        - id
-        - key
-      properties:
-        id:
-          $ref: '#/components/schemas/KeyId'
-        key:
-          type: string
-          format: byte
     LayoutMetaBlock:
       type: object
       required:
@@ -1503,6 +1519,15 @@ components:
       minLength: 64
       maxLength: 64
       pattern: '^[0-9a-f]*$'
+    KeyAlgorithm:
+      enum:
+        - RSA
+        - EC
+    HashAlgorithm:
+      enum:
+        - SHA256
+        - SHA384
+        - SHA512
     Rule:
       type: object
       required:
